--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="/.c9/metadata/symbol.jpg">
+  <meta name="description" content="my website">
+  <meta name="author" content="862205000">
 
-  <title>John Doe - Business Administration</title>
+  <Title>Paloma Herrera- Education and Human Development</Title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,14 +22,17 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
-</head>
+</head><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/test.jpg" alt="Profile Picture">
+
 
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Paloma Herrera</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/.c9/metadata/IMG_9303 (2) (1).jpg" alt="Profile Picture">
+
+
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +61,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Paloma Herrera
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Education and Human Development📚</div>
+        <p class="lead mb-4">Exceptional communications liason for corporate-level colleagues with expertise in resource allocation and schedule management.<br><br>
 
-        Enter bio here<br><br>
+        Comfortable providing external and internal client-related correspondence.Competent in operations and invoicing.<br><br>
 
-        Enter bio here
+        Highly- developed communicator with outstanding skills in complex problem solving skills. Personable with experience employing ecxeptional relationship-building abilities to cultivate positive rapport among employees and staff.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="instagram" href="https://instagram.com/puhlowma">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
-            <i class="fab fa-github"></i>
+          <a target="_blank" id="amazon" href="https://amazon.com">
+            <i class="fab fa-amazon"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" id="email" href="mailto:pherr022@ucr.com">
+            <i class="fa fa-envelope"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:palomaherrera7777@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +95,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Receptionist</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://bestbuy.com">Best Buy</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Schedule employee schedules for company X<br> 
+              • Customer service for appliance installations at Eagle Appliances<br>
+              • Experience with Excel, CSS,and Javascript<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://cleanextreme.com">Clean Extreme</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for beach clean up<br>
+              • Pick up trash and manage teams
+              Paint murals around Lake Elsinore<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">July 2019 - March 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteer Teaching Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wth.leusd.k12.ca.us">Withrow Elementary</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Ran sessions to help students learn how to multiply and divide<br>
+            • Reviewed and graded student end of year journal entry projects<br>
+            • Created educational content to help promote student education in world history knowledge<br>
+            • Assisted for over 200 elementary students each academic semester in high school.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2017 - January 2020</span>
           </div>
         </div>
 
@@ -152,18 +156,18 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Undergraduate of Education and Human Development</div>
+            <div>MBA in Education</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2020 - December 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <div class="subheading mb-3">Postgraduate Certificate in Behavioral Science</div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
@@ -190,8 +194,17 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
+        <h2 class="mb-5">Portfolio</h1>
+<center>
+    <img src="img//.c9/metadata/50014@2x.png" width="500px">
+    <img src="img//.c9/metadata/download.jpeg" width="500px"><br>
+    <img src="img//.c9/best-buy-international-strategic-update-15-728.jpg" width="500px">
+    <img src="img//.c9/images.png" width="500px"><br>
+</center>
+
         <center>
-            <img src="img/image2.jpeg" width="500px">
+           <img class="mypic" <img src="https:/origin.png"></img>
+           <iframe width="560 height="315"
         </center>
       </div>
     </section>
@@ -199,7 +212,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Paloma Herrera</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
